# nodes-manager

./: .gitignore  ALERTS.md  CICD_SUMMARY.md  CI_CD.md  Cargo.toml  Dockerfile.agent  Dockerfile.manager  LICENSE  OPERATIONS_MAPPING.md  README.md  REFACTORING_SUGGESTIONS.md  RELEASE_NOTES_v1.4.0.md  SECURITY.md  SNAPSHOT_OPTIMIZATION.md  TESTING.md  TEST_IMPROVEMENTS_SUMMARY.md  TEST_IMPROVEMENT_PLAN.md  TIMEZONE_FIX.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: CICD_SETUP.md  RELEASE_GUIDE.md
.github/workflows/: badges.yml  pr.yml  release.yml  test.yml
agent/: Cargo.toml
agent/src/: handlers.rs  lib.rs  main.rs  middleware.rs  types.rs
agent/src/operations/: mod.rs  pruning.rs  restore.rs  snapshots.rs  state_sync.rs
agent/src/services/: commands.rs  config_editor.rs  job_manager.rs  logs.rs  mod.rs  systemctl.rs
agent/tests/: restore_operations_tests.rs  snapshot_operations_tests.rs
config/: discovery.toml  main.toml
manager/: Cargo.toml
manager/config/: discovery.toml  main.toml
manager/src/: constants.rs  database.rs  errors.rs  lib.rs  main.rs  maintenance_tracker.rs  operation_tracker.rs  rpc.rs
manager/src/config/: manager.rs  mod.rs  secrets.rs  store.rs
manager/src/database/: config.rs  health.rs  maintenance.rs  mod.rs  records.rs
manager/src/health/: auto_restore.rs  cosmos.rs  log_monitor.rs  mod.rs  monitor.rs  solana.rs  types.rs
manager/src/http/: agent_manager.rs  mod.rs  operations.rs
manager/src/scheduler/: mod.rs  operations.rs
manager/src/services/: alert_service.rs  health_service.rs  hermes_service.rs  maintenance_service.rs  mod.rs  operation_executor.rs  snapshot_service.rs  state_sync_service.rs
manager/src/snapshot/: manager.rs  mod.rs
manager/src/state_sync/: mod.rs  rpc_client.rs
manager/src/web/: handlers.rs  mod.rs  server.rs
manager/src/web/handlers/: admin.rs  common.rs  config.rs  health.rs  maintenance.rs  mod.rs  operations.rs  snapshots.rs
manager/static/: index.html
manager/tests/: README_TEST_COVERAGE.md  business_rules_alert_rate_limiting.rs  business_rules_maintenance_windows.rs  business_rules_mutual_exclusion.rs  business_rules_snapshot_naming.rs  config_unit_tests.rs  database_unit_tests.rs  maintenance_tracker_integration.rs  manual_operations_integration.rs  mock_agent_demo.rs  operation_executor_tests.rs  operation_tracker_integration.rs  state_sync_integration_tests.rs  ui_integration_tests.rs  web_handlers_integration.rs
manager/tests/common/: mod.rs
manager/tests/common/fixtures/: mock_agent.rs  mock_rpc.rs  mock_webhook.rs  mod.rs  test_config.rs  test_data.rs  test_database.rs
src/: database.rs  main.rs  maintenance_tracker.rs
src/config/: manager.rs  mod.rs
src/health/: mod.rs  monitor.rs
src/scheduler/: mod.rs  operations.rs
src/services/: health_service.rs  hermes_service.rs  maintenance_service.rs  mod.rs  snapshot_service.rs
src/snapshot/: manager.rs
src/ssh/: manager.rs  mod.rs  operations.rs
src/web/: handlers.rs  mod.rs  server.rs
static/: index.html
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  App.vue  globals.css  main.tsx  style.css
ui/src/api/: client.ts
ui/src/components/dashboard/: ActivityFeed.tsx  IssuesPanel.tsx  MetricCard.tsx  QuickActions.tsx  SnapshotDownloads.tsx  SnapshotStats.tsx  UpcomingSchedule.tsx
ui/src/components/etl/: EtlPanel.tsx
ui/src/components/hermes/: HermesPanel.tsx
ui/src/components/layout/: Header.tsx  MetricsGrid.tsx  Navigation.tsx  PageLayout.tsx
ui/src/components/nodes/: NodeActions.tsx  NodesPanel.tsx
ui/src/components/shared/: ConfirmDialog.tsx  CronDisplay.tsx
ui/src/lib/: cron.ts  utils.ts
ui/src/pages/: Dashboard.tsx  Nodes.tsx  Services.tsx
ui/src/services/: api.ts
ui/src/types/: api.ts  index.ts  web-components.d.ts
ui/src/views/: DashboardView.old.vue  DashboardView.vue
