# File: Cargo.toml
[package]
name = "nodes-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "chrono"] }
reqwest = { version = "0.11", features = ["json"] }
async-ssh2-tokio = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
futures = "0.3"
glob = "0.3"
uuid = { version = "1.0", features = ["v4"] }
