# File: Cargo.toml (root)
[workspace]
resolver = "2"
members = [
    "manager",
    "agent"
]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
reqwest = { version = "0.11", features = ["json"] }
async-ssh2-tokio = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
futures = "0.3"
glob = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
