# File: Cargo.toml (root)
[workspace]
resolver = "2"
members = [
    "manager",
    "agent"
]

[workspace.dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "process", "io-util", "net", "signal"] }
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid", "macros", "migrate"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
futures = "0.3"
glob = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
