# File: agent/Cargo.toml
[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3.8"
rstest = "0.18"
test-case = "3.3"
serial_test = "3.0"
fake = { version = "2.9", features = ["derive", "chrono"] }
