# File: agent/Cargo.toml
[package]
name = "agent"
version = "1.5.0"
edition = "2021"

[lib]
name = "agent"
path = "src/lib.rs"

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3.8"
rstest = "0.26"
test-case = "3.3"
serial_test = "3.0"
fake = { version = "4.4", features = ["derive", "chrono"] }
