# File: manager/Cargo.toml
[package]
name = "manager"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "manager"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
async-ssh2-tokio = { workspace = true }
chrono = { workspace = true }
tokio-cron-scheduler = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
uuid = { workspace = true }
