# File: manager/Cargo.toml
[package]
name = "manager"
version = "1.4.0"
edition = "2021"

[[bin]]
name = "manager"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
tokio-cron-scheduler = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tower-http = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
wiremock = "0.6"
tempfile = "3.8"
rstest = "0.26"
test-case = "3.3"
serial_test = "3.0"
fake = { version = "4.4", features = ["derive", "chrono"] }
headless_chrome = "1.0"
scraper = "0.22"
